Update app title

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Hand to Hold</title>
+    <title>Hand2Hold</title>
 </head>
 
 <body>
